ui หน้าแนะนำเสร็จแล้ว

--- a/src/app/healthy/healthy.component.html
+++ b/src/app/healthy/healthy.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-11 col-md-11 col-sm-11 set-margin" style="margin-top: 5rem;">
             <!-- blog 1 youtube -->
             <div class="jumbotron">
-                <h1>Youtube for Exercise</h1>
+                <h1>Youtube for Exercise - แนะนำยูทูปสำหรับการออกกำลังกาย</h1>
                 <br>
                 <div id="demo" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -516,7 +516,7 @@
             <!-- ---------------------------------------------------------------------------------------- -->
             <!-- blog 2 song -->
             <div class="jumbotron">
-                <h1>Song for Exercise</h1>
+                <h1>Song for Exercise - แนะนำเพลงสำหรับการออกกำลังกาย</h1>
                 <br>
                 <div class="row">
                     <!-- 1 -->
@@ -650,7 +650,7 @@
                                                             <p class="song-font" style="margin-top:30px;">
                                                                 "Honestdocs"</p>
                                                             <p class="font-fam2">
-                                                                เป็นเว็บไซต์ที่มีบทความการดูแลรักษาปัญหาสุขภาพต่างๆ
+                                                                เว็บไซต์ที่มีบทความการดูแลรักษาปัญหาสุขภาพต่างๆ
                                                                 สามารถปรึกษาแพทย์ผู้เชี่ยวชาญได้ผ่านหน้าเว็บไซต์โดยไม่จำเป็นต้องเปิดเผยตัวตน
                                                                 อีกทั้งยังสามารถเช็คปริมาณแคลอรี่ในอาหารได้อีกด้วย</p>
                                                         </div>
@@ -678,7 +678,7 @@
                                                             <p class="song-font" style="margin-top:30px;">
                                                                 "Health-th"</p>
                                                             <p class="font-fam2">
-                                                                เป็นเว็บไซต์ที่รวมบทความเกี่ยวกับการออกกำลังกาย
+                                                                เว็บไซต์ที่รวมบทความเกี่ยวกับการออกกำลังกาย
                                                                 เคล็ดลับการออกกำลังกาย วิธีการออกกำลังกาย
                                                                 จากแบบที่ง่ายไปจนถึงแบบที่ท้าทาย
                                                                 นี่เป็นวิธีที่จะทำให้คุณมีรูปร่างดี</p>
@@ -707,7 +707,7 @@
                                                             <p class="song-font" style="margin-top:30px;">
                                                                 "Fatneverpage"</p>
                                                             <p class="font-fam2">
-                                                                เป็นเว็บไซต์สำหรับบันทึกและแบ่งปันประสบการณ์คนทำงานลดความอ้วนในชีวิตจริงที่ผู้สร้างได้ทำมา
+                                                                เว็บไซต์สำหรับบันทึกและแบ่งปันประสบการณ์คนทำงานลดความอ้วนในชีวิตจริงที่ผู้สร้างได้ทำมา
                                                                 โดยเน้นที่วิธี ออกกำลังกายและอาหารเป็นหลัก
                                                                 เพื่อให้เข้าใจถึงการลดความอ้วนที่ถูกต้อง
                                                                 โดยไม่ต้องพึ่งพาสารเคมี</p>
@@ -736,7 +736,7 @@
                                                             <p class="song-font" style="margin-top:30px;">
                                                                 "Sanook-Health"</p>
                                                             <p class="font-fam2">
-                                                                เป็นเว็บไซต์ที่มีบทความในการแสดงตารางแคลอรี่ในอาหาร ผัก
+                                                                เว็บไซต์ที่มีบทความในการแสดงตารางแคลอรี่ในอาหาร ผัก
                                                                 ผลไม้
                                                                 เครื่องดื่มและให้ความรู้ในเรื่องแคลลอรี่และพลังงานของมนุษย์อีกด้วย
                                                             </p>
@@ -757,23 +757,21 @@
                             <div class="row">
                                 <!-- 5 -->
                                 <div class="col-lg-3">
-                                    <a href="http://event.sanook.com/health/calories/" target="_blank"
+                                    <a href="http://www.lovefitt.com/" target="_blank"
                                         data-toggle="tooltip" title="click here and go!">
                                         <div class="card">
                                             <div class="front2">
                                                 <div class="content-page">
                                                     <div class="main text-center">
                                                         <!-- start text -->
-                                                        <img src="../../assets/img2/healthy/web-band4.jpg"
+                                                        <img src="../../assets/img2/healthy/web-band5.jpg"
                                                             alt="web-band" class="web-band">
                                                         <div class="coverback"></div>
                                                         <div class="pad">
                                                             <p class="song-font" style="margin-top:30px;">
-                                                                "Sanook-Health"</p>
+                                                                "LoveFitt"</p>
                                                             <p class="font-fam2">
-                                                                เป็นเว็บไซต์ที่มีบทความในการแสดงตารางแคลอรี่ในอาหาร ผัก
-                                                                ผลไม้
-                                                                เครื่องดื่มและให้ความรู้ในเรื่องแคลลอรี่และพลังงานของมนุษย์อีกด้วย
+                                                                เว็บไซต์ที่รวบวิธีลดความอ้วนสำหรับผู้เริ่มต้น อีกทั้งยังมีสาระการรับประทานอาหารอย่างไรให้สุขภาพดีต่างๆมากมาย
                                                             </p>
                                                         </div>
                                                         <!-- end text -->
@@ -786,21 +784,21 @@
                                 </div>
                                 <!-- 6 -->
                                 <div class="col-lg-3">
-                                    <a href="http://event.sanook.com/health/calories/" target="_blank" data-toggle="tooltip"
+                                    <a href="https://medthai.com/health/" target="_blank" data-toggle="tooltip"
                                         title="click here and go!">
                                         <div class="card">
                                             <div class="front2">
                                                 <div class="content-page">
                                                     <div class="main text-center">
                                                         <!-- start text -->
-                                                        <img src="../../assets/img2/healthy/web-band4.jpg"
+                                                        <img src="../../assets/img2/healthy/web-band6.jpg"
                                                             alt="web-band" class="web-band">
                                                         <div class="coverback"></div>
                                                         <div class="pad">
                                                             <p class="song-font" style="margin-top:30px;">
-                                                                "Sanook-Health"</p>
+                                                                "Medthai"</p>
                                                             <p class="font-fam2">
-                                                                เป็นเว็บไซต์ที่มีบทความในการแสดงตารางแคลอรี่ในอาหาร ผัก ผลไม้ เครื่องดื่มและให้ความรู้ในเรื่องแคลลอรี่และพลังงานของมนุษย์อีกด้วย</p>
+                                                                เว็บไซต์ที่รวบรวมบทความเคล็ดลับในการดูแลสุขภาพในส่วนต่างๆ รวมทั้งแนะนำผลิตภัณฑ์ที่ใช้บำรุงร่างกายหลายอย่าง</p>
                                                         </div>
                                                         <!-- end text -->
                                                     </div>
