--- a/src/app/upload-pic/upload-pic.component.scss
+++ b/src/app/upload-pic/upload-pic.component.scss
@@ -1,5 +1,8 @@
 // -------------- upload css ------------
-
+.set-margin {
+  margin-left: auto;
+  margin-right: auto;
+}
   .btn-file {
     position: relative;
     overflow: hidden;
