--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid position">
     <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="col-lg-12 col-md-12 col-sm-12 set-margin">
             <br>
             <br>
         </div>
         <div class="col-lg-9">
 
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12">
+        <div class="col-lg-3 col-md-12 col-sm-12 set-margin">
             <ul class="nav justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link font-fam2" data-toggle="tab" href="#home" [routerLink]="['/']"> Home</a>
