--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-8 col-md-8 col-sm-8 text-center top">
+    <div class="col-lg-8 col-md-8 col-sm-8 text-center top set-margin">
       <div class="d-flex flex-row mt-2">
         <div class="font-fam">
           <ul class="nav nav-tabs nav-tabs--vertical nav-tabs--left" role="navigation">
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-md-4 col-sm-4 text-center top">
+    <div class="col-lg-4 col-md-4 col-sm-4 text-center top set-margin">
       <img [src]="imageSend" class="imgBorder" style="width: 35rem; height: 45rem; margin-top: 3rem;">
       <h1 style="font-size: 60px; font-weight: bolder; color: white;">อยู่ในเกณฑ์ : ปกติ</h1>
       <br>
