--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -62,7 +62,7 @@
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4 text-center top set-margin">
       <img [src]="imageSend" class="imgBorder" style="width: 35rem; height: 45rem; margin-top: 3rem;">
-      <h1 style="font-size: 60px; font-weight: bolder; color: white;">อยู่ในเกณฑ์ : ปกติ</h1>
+      <h1 style="font-size: 60px; font-weight: bolder; color: white;">อยู่ในเกณฑ์ : {{text}} </h1>
       <br>
       <!-- div share -->
       <div>
