--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,8 +1,12 @@
 <div class="container-fluid">
   <div class="row set-margin">
     <!-- test -->
-
+    <div class="col-lg-12">
+     
+    </div>
+    <hr>
     <!-- end -->
+
     <div class="col-lg-1">
 
     </div>
@@ -10,12 +14,11 @@
       <img [src]="imageUrl" class="imgBorder" style=" width: 35rem; height: 45rem;" alt="select image">
       <br><br><br>
       <!-- start btn -->
-      <input type="file" #Image accept=".png, .jpg, .jpeg" style="display: none;"
-        (change)="handleFileInput($event.target.files)">
+      <input type="file" #Image accept="image/*" style=" display: none;" (change)="handleFileInput($event.target.files)">
       <button class="btn btn-default btn-lg" (click)="Image.click();">Select File</button>
 
       <button type="button" style="margin-left: 2rem" class="btn btn-default btn-lg" (click)="newMessage()"
-        [routerLink]="['/forecast']" [disabled]="buttonDisabled">Go to</button>
+       [disabled]="buttonDisabled">Go to</button>
       <!-- end btn -->
     </div>
     <div class="col-lg-8 col-md-8 col-sm-8 font-fam2 text-break">
