--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-12">
-      <ul *ngFor = "let em of getdata">
-        <li>{{em.thin}}</li>
-      </ul>
+    <div class="col-lg-12 text-center">
+      <!-- start test -->
+      <!-- end test -->
     </div>
+    
     <div class="col-lg-8 col-md-8 col-sm-8 text-center top set-margin">
       <div class="d-flex flex-row mt-2">
         <div class="font-fam">
