แก้ขนาดรูป + ใส่ alt

--- a/src/app/healthy/healthy.component.html
+++ b/src/app/healthy/healthy.component.html
@@ -162,7 +162,7 @@
                                                             <dd>
                                                                 <!-- youtube  -->
                                                                 <img src="../../assets/img2/social/youtube.png"
-                                                                    alt="instragram icon" class="social-icon">
+                                                                    alt="youtube icon" class="social-icon">
                                                                 <a href="https://www.youtube.com/user/TheFitnessMarshall/featured"
                                                                     target="_blank" class="font-fam3 social-link">The
                                                                     Fitness
@@ -243,7 +243,7 @@
                                                             <dd>
                                                                 <!-- youtube  -->
                                                                 <img src="../../assets/img2/social/youtube.png"
-                                                                    alt="instragram icon" class="social-icon">
+                                                                    alt="youtube icon" class="social-icon">
                                                                 <a href="https://www.youtube.com/channel/UCFjc9H89-RpWuIStDqhO7AQ/featured"
                                                                     target="_blank" class="font-fam3 social-link">Body
                                                                     Project</a>
@@ -321,7 +321,7 @@
                                                             <dd>
                                                                 <!-- youtube  -->
                                                                 <img src="../../assets/img2/social/youtube.png"
-                                                                    alt="instragram icon" class="social-icon">
+                                                                    alt="youtube icon" class="social-icon">
                                                                 <a href="https://www.youtube.com/user/popsugartvfit/featured"
                                                                     target="_blank"
                                                                     class="font-fam3 social-link">POPSUGAR Fitness</a>
@@ -406,7 +406,7 @@
                                                             <dd>
                                                                 <!-- youtube  -->
                                                                 <img src="../../assets/img2/social/youtube.png"
-                                                                    alt="instragram icon" class="social-icon">
+                                                                    alt="youtube icon" class="social-icon">
                                                                 <a href="https://www.youtube.com/user/BeFit/featured"
                                                                     target="_blank"
                                                                     class="font-fam3 social-link">BeFiT</a>
@@ -483,7 +483,7 @@
                                                             <dd>
                                                                 <!-- youtube  -->
                                                                 <img src="../../assets/img2/social/youtube.png"
-                                                                    alt="instragram icon" class="social-icon">
+                                                                    alt="youtube icon" class="social-icon">
                                                                 <a href="https://www.youtube.com/user/yogawithadriene/featured"
                                                                     target="_blank" class="font-fam3 social-link">Yoga
                                                                     With Adriene</a>
