--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 text-center top font-fam">
-      <img src="assets/img2/drumbell.png" style="width: 130px;">
+      <img src="assets/img2/drumbell.png" style="width: 130px;" alt="drumbell-icon">
       <p>Body Mass Index Prediction Web Application </p>
       <p>From Face Images Using Deep Learning</p>
     </div>
@@ -10,7 +10,7 @@
     </div>
 
     <div class="col-lg-12 col-md-12 col-sm-12 text-center top2 font-fam">
-      <img src="assets/img2/arrow.png" style="width: 150px;"  [routerLink]="['/upload-pic']">
+      <img src="assets/img2/arrow.png" style="width: 150px;"  [routerLink]="['/upload-pic']" alt="arrow-icon">
     </div>
   </div>
 </div>
