--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,9 +1,6 @@
 <div class="container-fluid">
   <div class="row set-margin">
     <!-- test -->
-    <div class="col-lg-12">
-     
-    </div>
     <hr>
     <!-- end -->
 
@@ -11,7 +8,8 @@
 
     </div>
     <div class="col-lg-3 col-md-3 col-sm-3 text-center top">
-      <img [src]="imageUrl" class="imgBorder" style=" width: 35rem; height: 45rem;" alt="select image">
+      <img [src]="imageUrl" class="imgBorder"  alt="select image">
+      <!-- style=" width: 35rem; height: 45rem;" -->
       <br><br><br>
       <!-- start btn -->
       <input type="file" #Image accept="image/*" style=" display: none;" (change)="handleFileInput($event.target.files)">
@@ -23,11 +21,11 @@
     </div>
     <div class="col-lg-8 col-md-8 col-sm-8 font-fam2 text-break">
       <p style="text-decoration: underline; margin-top: 120px;">ข้อแนะนำ</p>
-      <p style="text-indent: 50px; font-size: 30px; ">ควรใช้รูปที่มีใบหน้าตรง ไม่มีสิ่งบดบังใบหน้า
+      <p style="text-indent: 50px; font-size: 30px; ">ควรใช้รูปที่มีบุคคลเดียว มีใบหน้าตรง ไม่มีสิ่งบดบังใบหน้า
         เพื่อเพิ่มประสิทธิภาพในการพยากรณ์ค่า BMI จากโครงหน้าของผู้ใช้</p>
 
       <div class="text-center">
-        <img src="assets/img2/do not use.png" style="width: 900px;">
+        <img src="assets/img2/do not use.png" style="width: 900px;" alt="Picture u should to select">
       </div>
     </div>
   </div>
