edit face-twitt icon

--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -68,12 +68,14 @@
       <div>
         <!-- Facebook -->
         <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
-          <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+          <!-- <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" /> -->
+          <img src="../../assets/img2/social/face-icon.png" alt="Facebook" style="width:100px;"/>
         </a>
         <!-- Twitter -->
         <a href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons"
           target="_blank">
-          <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+          <!-- <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" /> -->
+          <img src="../../assets/img2/social/twitter-icon.png" alt="Twitter" style="width:70px; margin-left: 10px;" />
         </a>
       </div>
       <!-- end div share -->
