--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
             <br>
             <br>
         </div>
-        <div class="col-lg-9">
+        <!-- <div class="col-lg-9">
 
-        </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 set-margin">
-            <ul class="nav justify-content-center">
+        </div> -->
+        <div class="col-lg-12 col-md-12 col-sm-12 set-margin" style="float: right;">
+            <ul class="nav justify-content-end">
                 <li class="nav-item">
                     <a class="nav-link font-fam2" data-toggle="tab" href="#home" [routerLink]="['/']"> Home</a>
                 </li>
