--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,19 +2,11 @@
   margin-left: auto;
   margin-right: auto;
 }
-.font-fam {
-    font-family: TH SarabunPSK;
-    font-size: 15px;
-    font-weight: bold;
+  .font-fam {
+    font-size: 22px;
+    //font-weight: bold;
     color: white;
-  }
-
-  .font-fam2 {
-    font-family: TH SarabunPSK;
-    font-size: 26px;
-    font-weight: bold;
-    color: white;
-    text-align: center;
+    //text-align: center;
   }
 
   .active{
