--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,7 +9,7 @@
       <!-- พื้นที่ว่าง -->
     </div>
 
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center top2 font-fam">
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center top2">
       <img src="assets/img2/arrow.png" style="width: 150px;"  [routerLink]="['/upload-pic']" alt="arrow-icon">
     </div>
   </div>
