--- a/src/app/what-bmi/what-bmi.component.html
+++ b/src/app/what-bmi/what-bmi.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-lg-11 col-md-11 col-sm-11 text-center br-enter" style="margin-top: 5rem;">
+    <div class="col-lg-11 col-md-11 col-sm-11 br-enter font-fam" style="margin-top: 5rem;">
       <div class="jumbotron">
         <!-- บทความ -->
-        <h1 class="display-4">BMI คืออะไร ?!</h1>
-        <p class="lead font-fam indent">
+        <h1 class="display-4 text-center">BMI คืออะไร ?!</h1>
+        <p class="lead indent">
           Body Mass Index (BMI) หรือเรียกกันว่า ค่าดัชนีมวลร่างกาย คือ
           อัตราส่วนระหว่างน้ำหนักต่อส่วนสูงที่ใช้บ่งชี้ว่าอ้วนหรือผอมในผู้ใหญ่ตั้งแต่อายุ 20 ปีขึ้นไป
           สามารถทำได้โดยการชั่งน้ำหนักตัวเป็นกิโลกรัมและวัดส่วนสูงเป็นเซนติเมตร แล้วนำมาหาค่าดัชมีมวลกาย
           โดยมีสูตรการคำนวณ = น้ำหนักตัว[Kg] / (ส่วนสูง[cm] ยกกำลังสอง)
         </p>
-        <p class="lead font-fam indent">
+        <p class="lead indent">
           โดยประโยชน์ของการทราบค่า BMI ของตนเองนั้นสืบเนื่องมาจาก
           ในปัจจุบันปัญหาสุขภาพและภาวะน้ำหนักเกินนั้นสามารถพบได้เกือบทุกที่จึงเป็นปัจจัยเสี่ยงหรือเป็นสาเหตุให้เกิดโรคต่างๆที่ส่งผลถึงสุขภาพจนอาจเป็นสาเหตุให้เสียชีวิตได้
           เช่น โรคความดันโลหิตสูง โรคเบาหวาน โรคหัวใจขาดเลือด และโรคนิ่วในถุงน้ำดี
@@ -21,21 +21,22 @@
         </p>
         <div class="row">
           <div class="col-lg-5 text-center br-enter">
+            <br>
             <img class="card-img-top" src="../../assets/img2/bmi-psd.jpg" alt="Exercise Picture" />
           </div>
         </div>
         <br>
-        <p class="lead font-fam ">ซึ่งเกณฑม์าตรฐานของดัชนีมวลกายของชาวเอเชีย มีดังนี้</p>
-        <p class="lead font-fam indent">- อ้วนมาก ( 30.0 ขึ้นไป )</p>
-        <p class="lead font-fam indent">- อ้วน ( 25.0 - 29.9 )</p>  
-        <p class="lead font-fam indent">- น้ำหนักเกิน ( 23.0 - 24.9 )</p>
-        <p class="lead font-fam indent">- น้ำหนักปกติ เหมาะสม ( 18.6 - 22.9 )</p>  
-        <p class="lead font-fam indent">- ผอมเกินไป ( น้อยกว่า 18.5 )</p>
+        <p class="lead ">ซึ่งเกณฑม์าตรฐานของดัชนีมวลกายของชาวเอเชีย มีดังนี้</p>
+        <p class="lead indent">- อ้วนมาก ( 30.0 ขึ้นไป )</p>
+        <p class="lead indent">- อ้วน ( 25.0 - 29.9 )</p>  
+        <p class="lead indent">- น้ำหนักเกิน ( 23.0 - 24.9 )</p>
+        <p class="lead indent">- น้ำหนักปกติ เหมาะสม ( 18.6 - 22.9 )</p>  
+        <p class="lead indent">- ผอมเกินไป ( น้อยกว่า 18.5 )</p>
 
         <!-- end -->
 
         <hr>
-        <p>Copyright © 2019 Rajamangala University of Technology Tawan-Ok : Chakrabongse Bhuvanarth Campus - Information
+        <p class="text-center">Copyright © 2019 Rajamangala University of Technology Tawan-Ok : Chakrabongse Bhuvanarth Campus - Information
           Technology </p>
 
       </div>
