--- a/src/app/what-bmi/what-bmi.component.scss
+++ b/src/app/what-bmi/what-bmi.component.scss
@@ -1,14 +1,7 @@
 .font-fam {
-    font-family: TH SarabunPSK;
-    font-size: 30px;
+    font-size:23px;
     text-align: left;
-  }
-  
-  .font-fam2 {
-    font-family: TH SarabunPSK;
-    font-size: 30px;
-    font-weight: bolder;
-    color: white;
+    padding: 20px;
   }
 
   .br-enter{
@@ -22,7 +15,7 @@
   }
 
   .indent {
-    text-indent: 100px;
+    text-indent: 50px;
   }
 
 
