--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,19 +10,18 @@
         <div class="col-lg-12 col-md-12 col-sm-12 set-margin" style="float: right;">
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#home" [routerLink]="['/']"> Home</a>
+                    <a class="nav-link font-fam" data-toggle="tab" href="#home" [routerLink]="['/']"> Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#bmi-is" [routerLink]="['/what-bmi']">What is
+                    <a class="nav-link font-fam" data-toggle="tab" href="#bmi-is" [routerLink]="['/what-bmi']">What is
                         BMI?</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link font-fam2" data-toggle="tab" href="#about-healthy"
-                        [routerLink]="['/healthy']">Web about healthy</a>
+                    <a class="nav-link font-fam" data-toggle="tab" href="#about-healthy" [routerLink]="['/healthy']">Web
+                        about healthy</a>
                 </li>
             </ul>
-
         </div>
     </div>
 </div>
