--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -1,8 +1,6 @@
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div class="row" *ngFor="let item of text">
     <div class="col-lg-12 text-center">
-      <!-- start test -->
-      <!-- end test -->
     </div>
     <div class="col-lg-8 col-md-8 col-sm-8 text-center top set-margin">
       <div class="d-flex flex-row mt-2">
@@ -24,20 +22,17 @@
           </ul>
         </div>
         <div class="tab-content text-left font-fam2">
-          <div class="tab-pane fade show contentData active" id="result" role="tabpanel" [style.overflow]="'auto'"
-            [style.height.px]="550">
-            <h1>ผลการทำนาย</h1>
+          <div class="tab-pane show contentData active" id="result" role="tabpanel">
+            <p>ผลการทำนาย</p>
             <p>{{item.main}}</p>
 
           </div>
-          <div class="tab-pane fade contentData" id="excercise" role="tabpanel" [style.overflow]="'auto'"
-            [style.height.px]="550">
-            <h1>คำแนะนำการออกกำลังกาย</h1>
+          <div class="tab-pane contentData" id="excercise" role="tabpanel">
+            <p>คำแนะนำการออกกำลังกาย</p>
             <p>{{item.exercise}}</p>
           </div>
-          <div class="tab-pane fade contentData" id="eat" role="tabpanel" [style.overflow]="'auto'"
-            [style.height.px]="550">
-            <h1>คำแนะนำการรับประทานอาหาร</h1>
+          <div class="tab-pane contentData" id="eat" role="tabpanel">
+            <p>คำแนะนำการรับประทานอาหาร</p>
 
             <p>{{item.food}}</p>
           </div>
@@ -47,7 +42,57 @@
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4 text-center top set-margin">
       <img [src]="imageSend" alt="User Photo" class="imgBorder" style="width: 35rem; height: 45rem; margin-top: 3rem;">
-      <h1 style="font-size: 60px; font-weight: bolder; color: white;">อยู่ในเกณฑ์ : {{item.class}} </h1>
+      <p style="font-size: 60px; font-weight: bolder; color: white;">อยู่ในเกณฑ์ : {{item.class}} </p>
+      <br>
+    </div>
+  </div>
+</div> -->
+<div class="container-fluid">
+  <div class="row" *ngFor="let item of text">
+    <div class="col-lg-12 text-center">
+    </div>
+    <div class="col-lg-8 col-md-8 col-sm-8 text-center top set-margin">
+      <br>
+      <div class="d-flex flex-row mt-2">
+        <div class="font-fam">
+          <ul class="nav nav-tabs nav-tabs--vertical nav-tabs--left" role="navigation">
+            <li class="nav-item">
+              <a href="#result" class="nav-link active" data-toggle="tab" role="tab" aria-controls="result">ผลการทำนาย
+                BMI</a>
+            </li>
+            <li class="nav-item">
+              <a href="#excercise" class="nav-link" data-toggle="tab" role="tab"
+                aria-controls="excercise">คำแนะนำการออกกำลังกาย</a>
+            </li>
+            <li class="nav-item">
+              <a href="#eat" class="nav-link" data-toggle="tab" role="tab"
+                aria-controls="eat">คำแนะนำการรับประทานอาหาร</a>
+            </li>
+
+          </ul>
+        </div>
+        <div class="tab-content text-left font-fam2 bg">
+          <div class="tab-pane show contentData active scroll" id="result" role="tabpanel">
+            <p class="font-fam3"><ins>ผลการทำนาย</ins></p>
+            <p class="content-text text-break ">{{item.main}}</p>
+
+          </div>
+          <div class="tab-pane contentData scroll" id="excercise" role="tabpanel">
+            <p class="font-fam3"><ins>คำแนะนำการออกกำลังกาย</ins></p>
+            <p class="content-text text-break ">{{item.exercise}}</p>
+          </div>
+          <div class="tab-pane contentData scroll " id="eat" role="tabpanel">
+            <p class="font-fam3"><ins>คำแนะนำการรับประทานอาหาร</ins></p>
+
+            <p class="content-text text-break ">{{item.food}}</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 text-center top set-margin">
+      <img [src]="imageSend" alt="User Photo" class="imgBorder" style="width: 35rem; height: 45rem; margin-top: 3rem;">
+      <p class="font-fam4">อยู่ในเกณฑ์ : {{item.class}} </p>
       <br>
     </div>
   </div>
