--- a/src/app/healthy/healthy.component.html
+++ b/src/app/healthy/healthy.component.html
@@ -3,7 +3,7 @@
         <div class="col-lg-11 col-md-11 col-sm-11 set-margin" style="margin-top: 5rem;">
             <!-- blog 1 youtube -->
             <div class="jumbotron">
-                <h1>Youtube for Exercise - แนะนำยูทูปสำหรับการออกกำลังกาย</h1>
+                <p style="font-size:35px;">Youtube for Exercise - แนะนำยูทูปสำหรับการออกกำลังกาย</p>
                 <br>
                 <div id="demo" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -34,17 +34,17 @@
                                                             class="logo" />
                                                         <p class="font-fam" style="margin-left: 20px;">Fitjunctions
                                                         </p>
-                                                        <div class="text-center ">
+                                                        <div class="text-center">
                                                             <img src="../../assets/img2/healthy/fit-img.PNG"
-                                                                class="img-font" alt="fit img">
+                                                                class="img-font" style="margin-top:8px;" alt="fit img">
                                                         </div>
                                                         <p class="font-fam2 text-center"
                                                             style="font-weight: bolder; margin-top: 8px;">"หุ่นดี
                                                             แบบถูกวิธี"
                                                         </p>
-                                                        <p class="font-fam4 text-center" style="margin-top: -20px;">
-                                                            ไม่อดของอร่อย
-                                                            ไม่หักโหม และเน้นที่การสอนความรู้ที่เข้าใจง่าย</p>
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">
+                                                            ไม่อดของอร่อย ไม่หักโหม </p>
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">และเน้นที่การสอนความรู้ที่เข้าใจง่าย</p>
 
                                                         <!-- end text -->
                                                     </div>
@@ -122,7 +122,7 @@
                                                             Dance"
                                                         </p>
                                                         <p class="font-fam4 text-center"
-                                                            style="margin-top: -20px; font-size: 18px;">Get ready to
+                                                            style="margin-top: -10px;">Get ready to
                                                             sweat yourself
                                                             sexy with The Fitness Marshall</p>
                                                         <!-- end text -->
@@ -202,7 +202,7 @@
                                                             And Excellent
                                                             Movement"</p>
                                                         <!-- 10 -->
-                                                        <p class="font-fam4 text-center" style="margin-top: -20px;">High
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">High
                                                             energy,
                                                             motivating
                                                             workouts to do from home.</p>
@@ -283,7 +283,7 @@
                                                             Dance Workouts"</p>
                                                         <!-- 10 -->
                                                         <p class="font-fam4 text-center"
-                                                            style="margin-top: -20px; font-size: 21px;">POPSUGAR
+                                                            style="margin-top: -10px;">POPSUGAR
                                                             Fitness offers fresh fitness</p>
                                                         <!-- end text -->
                                                     </div>
@@ -367,7 +367,7 @@
                                                             style="font-weight: bolder; margin-top: 8px;">"Top Fitness
                                                             Trainers"
                                                         </p>
-                                                        <p class="font-fam4 text-center" style="margin-top: -20px;">Get
+                                                        <p class="font-fam4 text-center" style="margin-top: -10px;">Get
                                                             high-quality workouts & re-shape your body</p>
 
                                                         <!-- end text -->
@@ -445,7 +445,7 @@
                                                             style="font-weight: bolder; margin-top: 8px;">"Yoga in home"
                                                         </p>
                                                         <p class="font-fam4 text-center"
-                                                            style="margin-top: -18px; font-size: 18px;">Work up a sweat,
+                                                            style="margin-top: -10px;">Work up a sweat,
                                                             or calm and relieve a tired mind and body</p>
                                                         <!-- end text -->
                                                     </div>
@@ -516,7 +516,7 @@
             <!-- ---------------------------------------------------------------------------------------- -->
             <!-- blog 2 song -->
             <div class="jumbotron">
-                <h1>Song for Exercise - แนะนำเพลงสำหรับการออกกำลังกาย</h1>
+                <p style="font-size:35px;">Song for Exercise - แนะนำเพลงสำหรับการออกกำลังกาย</p>
                 <br>
                 <div class="row">
                     <!-- 1 -->
@@ -592,13 +592,13 @@
                                         <!-- หน้าปก -->
                                         <img src="../../assets/img2/song-cover.jpg" alt="song-cover" />
                                     </div>
-                                    <div class="content">
+                                    <div class="content" style="padding-left: 0px;padding-right: 0px;">
                                         <div class="main">
                                             <!-- start text -->
-                                            <p class="song-font">Workout Music Service Channel</p>
+                                            <p class="song-font" style="font-size: 23px;">Workout Music Service Channel</p>
                                             <div class="text-center ">
                                                 <iframe class="img-font" src="https://www.youtube.com/embed/99lIIjKsB0g"
-                                                    allowfullscreen></iframe>
+                                                    allowfullscreen style="margin-top:1px;"></iframe>
                                             </div>
                                             <p class="font-fam2 text-center title-small"
                                                 style="font-weight: bolder; margin-top: 5px;">
@@ -620,7 +620,7 @@
             <!-- ---------------------------------------------------------------------------------------- -->
             <!-- blog 3 health-->
             <div class="jumbotron">
-                <h1>Health Page - เพจแนะนำต่างๆสำหรับคนรักสุขภาพ</h1>
+                <p style="font-size:35px;">Health Page - เพจแนะนำต่างๆสำหรับคนรักสุขภาพ</p>
                 <br>
                 <div id="demo2" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -757,8 +757,8 @@
                             <div class="row">
                                 <!-- 5 -->
                                 <div class="col-lg-3">
-                                    <a href="http://www.lovefitt.com/" target="_blank"
-                                        data-toggle="tooltip" title="click here and go!">
+                                    <a href="http://www.lovefitt.com/" target="_blank" data-toggle="tooltip"
+                                        title="click here and go!">
                                         <div class="card">
                                             <div class="front2">
                                                 <div class="content-page">
@@ -771,7 +771,8 @@
                                                             <p class="song-font" style="margin-top:30px;">
                                                                 "LoveFitt"</p>
                                                             <p class="font-fam2">
-                                                                เว็บไซต์ที่รวบวิธีลดความอ้วนสำหรับผู้เริ่มต้น อีกทั้งยังมีสาระการรับประทานอาหารอย่างไรให้สุขภาพดีต่างๆมากมาย
+                                                                เว็บไซต์ที่รวบวิธีลดความอ้วนสำหรับผู้เริ่มต้น
+                                                                อีกทั้งยังมีสาระการรับประทานอาหารอย่างไรให้สุขภาพดีต่างๆมากมาย
                                                             </p>
                                                         </div>
                                                         <!-- end text -->
@@ -798,7 +799,8 @@
                                                             <p class="song-font" style="margin-top:30px;">
                                                                 "Medthai"</p>
                                                             <p class="font-fam2">
-                                                                เว็บไซต์ที่รวบรวมบทความเคล็ดลับในการดูแลสุขภาพในส่วนต่างๆ รวมทั้งแนะนำผลิตภัณฑ์ที่ใช้บำรุงร่างกายหลายอย่าง</p>
+                                                                เว็บไซต์ที่รวบรวมบทความเคล็ดลับในการดูแลสุขภาพในส่วนต่างๆ
+                                                                รวมทั้งแนะนำผลิตภัณฑ์ที่ใช้บำรุงร่างกายหลายอย่าง</p>
                                                         </div>
                                                         <!-- end text -->
                                                     </div>
