--- a/src/app/healthy/healthy.component.scss
+++ b/src/app/healthy/healthy.component.scss
@@ -3,36 +3,31 @@
   margin-right: auto;
 }
 
-.card .font-fam {
-  font-family: TH SarabunPSK;
-  font-size: 33px;
+.card .font-fam { //ชื่อแชแนล
+  font-size: 21px;
   text-align: center;
   font-weight: bolder;
   color: white;
-  margin-top:-60px;
+  margin-top:-50px;
 }
 
-.card .font-fam2 {
-  font-family: TH SarabunPSK;
-  font-size: 23px;
+.card .font-fam2 { //หัวข้อ
+  font-size: 17px;
   color: white;
 }
 
-.card .font-fam3 {
-  font-family: TH SarabunPSK;
-  font-size: 30px;
+.card .font-fam3 { //ข้างหลัง
+  font-size: 20px;
   font-weight: bolder;
 }
 
-.card .font-fam4 {
-  font-family: TH SarabunPSK;
-  font-size: 20px;
+.card .font-fam4 { //คำบรรยาย
+  font-size: 14px;
   color: white;
 }
 
 .card .song-font {
-  font-family: TH SarabunPSK;
-  font-size: 33px;
+  font-size: 25px;
   text-align: center;
   font-weight: bolder;
   color: white;
@@ -260,7 +255,7 @@ height: 90px;
 
 .card .motto {
 border-bottom: 1px solid #EEEEEE;
-font-size: 32px;
+font-size: 26px;
 font-weight: 400;
 padding-bottom: 10px;
 text-align: center;
