--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,8 +1,8 @@
 .font-fam {
-  font-family: TH SarabunPSK;
-  font-size: 60px;
-  font-weight: bold;
+  font-size: 55px;
   color: white;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 
 .button {
