--- a/src/app/upload-pic/upload-pic.component.html
+++ b/src/app/upload-pic/upload-pic.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row set-margin">
 
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center top ">
+    <div class="col-lg-12 col-md-12 col-sm-12 text-center top">
       <p class="font-fam" style="margin-left: 8%;">Upload your Picture
         <a data-toggle="tooltip" title="Help">
           <button type="button" class="btn btn-default" style="margin-left: 5%;" data-toggle="modal"
@@ -27,7 +27,7 @@
 
       <!-- The Modal 1 -->
       <div class="modal fade" id="myModal">
-        <div class="modal-dialog modal-lg" style="margin-top:17%;">
+        <div class="modal-dialog modal-lg font-fam2" style="margin-top:17%;">
           <div class="modal-content">
 
             <!-- Modal Header -->
@@ -39,7 +39,7 @@
 
             <!-- Modal body -->
             <div class="modal-body">
-              <p style="font-size: 30px; padding: 30px;">ควรใช้รูปที่มีบุคคลเดียว มีใบหน้าตรง ไม่มีสิ่งบดบังใบหน้า
+              <p class="text-left" style="font-size: 30px; padding: 30px;">ควรใช้รูปที่มีบุคคลเดียว มีใบหน้าตรง ไม่มีสิ่งบดบังใบหน้า
                 เพื่อเพิ่มประสิทธิภาพในการพยากรณ์ค่า BMI จากโครงหน้าของผู้ใช้</p>
 
               <div class="text-center set-margin">
@@ -60,7 +60,7 @@
     <div *ngIf="showSecret" class="col-lg-7 col-md-7 col-sm-12 set-margin" style="margin-top:-800px;">
       <div class="jumbotron box-shadow" style="height: 70rem;">
         <div class="spinner-border text-info po-spin mx-auto d-block"></div>
-        <p class="text-center font-fam" style="margin-top: 40px;color: black;">กรุณารอสักครู่....</p>
+        <p class="text-center font-fam2" style="margin-top: 40px;">กรุณารอสักครู่....</p>
       </div>
     </div>
     <!-- end wait -->
