--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import 'ag-grid-community/dist/styles/ag-theme-balham.css';
 
 body { 
-    font-family: TH SarabunPSK, Arial, sans-serif;
+    //font-family: TH SarabunPSK, Arial, sans-serif;
     margin: 0;
     background-image: url('./app/img/web-desing-2.jpg');
     background-repeat: repeat-x;
